AYBR3000/AYBR3000.cydsn/CortexM0p/ARM_GCC_493/Debug/REBUILD.log
--------------- Rebuild Started: 11/01/2017 20:26:50 Project: main.c, Configuration: ARM GCC 4.9-2015-q1-update Debug ---------------
arm-none-eabi-gcc.exe -mcpu=cortex-m0plus -mthumb -I. -IGenerated_Source\PSoC4 -Wa,-alh=.\CortexM0p\ARM_GCC_493\Debug/main.lst -g -D DEBUG -Wall -ffunction-sections -Og -ffat-lto-objects -c main.c -o .\CortexM0p\ARM_GCC_493\Debug\main.o
main.c: In function 'main':
main.c:47:14: error: 'key_process' undeclared (first use in this function)
     task_add(key_process, 10);      
              ^
main.c:47:14: note: each undeclared identifier is reported only once for each function it appears in
The command 'arm-none-eabi-gcc.exe' failed with exit code '1'.
--------------- Rebuild Failed: 11/01/2017 20:26:52 ---------------
